; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/extr_dmu_send.c_backup_do_embed.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/extr_dmu_send.c_backup_do_embed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@B_FALSE = common dso_local global i32 0, align 4
@ZIO_COMPRESS_LEGACY_FUNCTIONS = common dso_local global i64 0, align 8
@DMU_BACKUP_FEATURE_LZ4 = common dso_local global i32 0, align 4
@DMU_BACKUP_FEATURE_EMBED_DATA = common dso_local global i32 0, align 4
@B_TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32*)* @backup_do_embed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @backup_do_embed(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %5, align 8
  %7 = call i32 @BP_IS_EMBEDDED(i32* %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %2
  %10 = load i32, i32* @B_FALSE, align 4
  store i32 %10, i32* %3, align 4
  br label %42

11:                                               ; preds = %2
  %12 = load i32*, i32** %5, align 8
  %13 = call i64 @BP_GET_COMPRESS(i32* %12)
  %14 = load i64, i64* @ZIO_COMPRESS_LEGACY_FUNCTIONS, align 8
  %15 = icmp sge i64 %13, %14
  br i1 %15, label %16, label %25

16:                                               ; preds = %11
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @DMU_BACKUP_FEATURE_LZ4, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %25, label %23

23:                                               ; preds = %16
  %24 = load i32, i32* @B_FALSE, align 4
  store i32 %24, i32* %3, align 4
  br label %42

25:                                               ; preds = %16, %11
  %26 = load i32*, i32** %5, align 8
  %27 = call i32 @BPE_GET_ETYPE(i32* %26)
  switch i32 %27, label %38 [
    i32 128, label %28
  ]

28:                                               ; preds = %25
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* @DMU_BACKUP_FEATURE_EMBED_DATA, align 4
  %33 = and i32 %31, %32
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %37

35:                                               ; preds = %28
  %36 = load i32, i32* @B_TRUE, align 4
  store i32 %36, i32* %3, align 4
  br label %42

37:                                               ; preds = %28
  br label %40

38:                                               ; preds = %25
  %39 = load i32, i32* @B_FALSE, align 4
  store i32 %39, i32* %3, align 4
  br label %42

40:                                               ; preds = %37
  %41 = load i32, i32* @B_FALSE, align 4
  store i32 %41, i32* %3, align 4
  br label %42

42:                                               ; preds = %40, %38, %35, %23, %9
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

declare dso_local i32 @BP_IS_EMBEDDED(i32*) #1

declare dso_local i64 @BP_GET_COMPRESS(i32*) #1

declare dso_local i32 @BPE_GET_ETYPE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
